manifests/loadbalancer.yml
# DO NOT REALLY NEED THIS YML FILE BECAUSE LOADBALANCER ARE CREATED WHEN INSTALLING INGRESS CHART FROM HELM

apiVersion: v1

kind: Service

metadata:
  name: planetarium-loadbalancer

spec:
  type: LoadBalancer
  selector:
    app: planetarium-pod # any service should be targeting a POD not another service. So this one should be targeting a pod. When creating ingress object with helm a loadbalancer pod will automatically be created
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
