manifests/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: planetarium-ingress
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/use-regex: "true" 
    nginx.ingress.kubernetes.io/rewrite-target: $1

spec:
  rules:
    - http:
        paths:
          - path: /planetarium(.+)
            pathType: Prefix
            backend:
              service:
                name: planetarium-clusterip
                port:
                  number: 80
